Edited boids blog

--- a/_posts/2023-01-14-devlog_0/2023-01-14-devlog_0.md
+++ b/_posts/2023-01-14-devlog_0/2023-01-14-devlog_0.md
@@ -1,11 +1,13 @@
 ---
 layout: post
-title: Learning game dev with Godot 4.0 Part 0
+title: Coding Adventure- Boids with Godot
 date: 2022-01-15 17:00
 ---
 Godot 4.0 is in beta now, and I have wanted to learn game dev for a long
 time. So I downloaded [godot 4.0 beta 10](https://godotengine.org/article/dev-snapshot-godot-4-0-beta-10).
 
+### New Series: Coding Adventure
+This series is inspired by the coding adventure series by [Sebastian Lague](https://www.youtube.com/@SebastianLague)
 ### Why Godot?
 
 
@@ -16,11 +18,17 @@ godot more than unity ; also it was:-
 - Open source: I am in complete control of what I create
 - I prefer nodes over monobehaviour
 
-So to refresh my memory a bit a started reading the [godot documentation](https://docs.godotengine.org/en/latest/)
+So to refresh my memory a bit I started reading the [godot documentation](https://docs.godotengine.org/en/latest/)
 But that was quite boring so I decided to make a small project to make myself familiar with the godot interface.
 I decided to create a [boid simulation](https://en.wikipedia.org/wiki/Boids).
 
 After a lot of fiddling I got it working.
 {% include youtubePlayer.html id="58KKK_pQdEM" %}
+
+In the main game loop the acceleration of each boid is calculated by four parameters:
+1. **Cohesion force**: The boids are accelerated towards the center of all the group
+2. **Align force**: The boids are aligned towards the average heading of every other boid.
+3. **Sepration Force**: The boids are steered away from every other boid.
+4. **Force to follow target** The boid is steered towards the target(mouse cursor in this case).
 
 
